[package]
name = "wexel"
version = "1.0.0"
edition = "2021"
authors = ["Philipp Speck <philipp@typo.media>"]
description = "CLI tool to convert Excel files to CSV files."

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
clap = "3.2.0"
calamine = "0.24.0"
sanitize-filename = "0.5.0"
csv = "1.3.0"
chrono = "0.4.35"
